# LLM-code-Service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
compiler/: README.md  judge0-k8s.yaml
llm_service/: __init__.py  main.py
llm_service/api/: __init__.py  app.py
llm_service/core/: __init__.py  config.py  function_calling.py  inference_engine.py  model_loader.py
llm_service/modules/: __init__.py  _template.py  base.py  router.py
llm_service/modules/best_practices/: __init__.py  helpers.py  module.py  routes.py  rules.json  schemas.py
llm_service/modules/evaluation_service/: __init__.py  helpers.py  module.py  routes.py  schemas.py
